--- a/introducao-javascript-inicial/introducao-javascript/css/index.css
+++ b/introducao-javascript-inicial/introducao-javascript/css/index.css
@@ -138,3 +138,28 @@ button[disabled=disabled], button:disabled {
 	background-color: red;
 
 }
+
+.fadeOut{
+
+	opacity: 0;
+	transition: 0.5s;
+
+}
+
+#filtro {
+
+	width: 150px;
+
+	height: 35px;
+
+	margin-bottom: 10px;
+
+}
+
+.esconder {
+
+	display: none;
+
+	background-color: red;
+
+}
